--- a/Pages/ofArray.html
+++ b/Pages/ofArray.html
@@ -24,15 +24,15 @@
         <header class="header">
 
             <div class="icon">
-                <img src="../Sources/etjslogo.png" alt="" srcset="" width="50%">
-
+              <a href="../index.html"> <img src="../Sources/etjslogo.png" alt="" srcset="" width="50%">
+              </a> 
             </div>
             <p class="init">Easy Tools JS</p>
 
             <nav class="header-nav">
                 <ul class="header-nav-list">
 
-                    <a href="">
+                    <a href="../index.html">
                         <li class="header-nav-element">Inicio</li>
                     </a>
                     <a href="">
@@ -215,7 +215,7 @@
 
                 <div class="method-container">
                     <p>
-                        <h6>ofArray.type:</h4>
+                        <h6>ofArray.type:</h6>
 
                             este metodo, recibe como parametro un arreglo, evalua cada uno de los elementos y dice que
                             tipo de arreglo es, esto inspirado en leguajes de tipado estatico como java, puede retornar
@@ -288,11 +288,11 @@
                             <br>
                             <span class="puntuation">//La salida por consola seria: <br>  {
                                 <br>
-                                0: "hola mundo", <br>
-                                1: 231, <br>
-                                2: true, <br>
-                                3: 9978 <br>
-                                4: "txt"
+                                '0': "hola mundo", <br>
+                                '1': 231, <br>
+                                '2': true, <br>
+                                '3': 9978 <br>
+                                '4': "txt"
                                 <br>
                             } 
                         </span>
