bugs fixed in ofarray

--- a/Pages/ofArray.html
+++ b/Pages/ofArray.html
@@ -60,7 +60,7 @@
 
                 <ul class="methods">
 
-                    <a href="./Pages/ofArray.html">
+                    <a href="ofArray.html">
                         <li class="methods-element">ofArray</li>
                     </a>
 
