--- a/Pages/perimeterOf.html
+++ b/Pages/perimeterOf.html
@@ -5,33 +5,34 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <link rel="stylesheet" href="./Css/styles.css">
-    <link rel="stylesheet" href="./Css/responsive.css">
+    <link rel="stylesheet" href="../Css/styles.css">
+    <link rel="stylesheet" href="../Css/responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./Sources/etjslogo.png" type="image/x-icon">
-
-
-
+    <link rel="shortcut icon" href="../Sources/etjslogo.png" type="image/x-icon">
     <title>Easy Tools JS</title>
+
 </head>
 
 
 <body>
-
     <div class="container">
 
         <header class="header">
 
             <div class="icon">
-                <img src="./Sources/etjslogo.png" alt="" srcset="" width="50%">
 
-            </div>
+                <a href="../index.html"><img src="../Sources/etjslogo.png" alt="" srcset="" width="50%"> </a>
+
+           </div>
             <p class="init">Easy Tools JS</p>
 
             <nav class="header-nav">
                 <ul class="header-nav-list">
 
+                    <a href="../index.html">
+                        <li class="header-nav-element">Inicio</li>
+                    </a>
                     <a href="">
                         <li class="header-nav-element">Descargar</li>
                     </a>
@@ -46,19 +47,15 @@
             </nav>
         </header>
 
-        <section class="hero" width="200px">
-            <img src="./Sources/heroimage.jpg" alt="">
-
-        </section>
 
         <a href="#" id="js_up" class="to-top">
 
-            <i class="fa fa-rocket" aria-hidden="true">   ^   </i>
+            <i class="fa fa-rocket" aria-hidden="true"> ^ </i>
         </a>
 
 
         <section class="main">
-            <article class="nav-methods">
+            <article>
 
                 <a href="">
                     <p>Metodos y funciones</p>
@@ -70,7 +67,7 @@
                         <li class="methods-element">ofArray</li>
                     </a>
 
-                    <a href="./Pages/areaOf.html">
+                    <a href="">
                         <li class="methods-element">areaOf</li>
                     </a>
 
@@ -124,81 +121,12 @@
                 </ul>
             </article>
             <article>
-                <h1>
-                    Sobre Easy Tools Js Lybrary.
-                </h1>
-                <div>
-
-                    <p class="about-et">
-                        Easy tools nace como la idea de ser un conjunto de herramientas para la resolucion
-                        de problemas recurrentes a la hora de desarollar software, ya sea del lado del front end
-                        o del backend, brindando soluciones y funcionalidades prediseñados para que sean mas sencillos
-                        algunas tareas, <strong> En la version 1.0 de Easy Tools </strong> tenemos todo tipo de
-                        herramientas que podemos implementar dentro del lenguaje javascript,
-                        desde
-                        <ul>
-                            <li>Matematicas</li>
-                            <li>Estructuras de datos</li>
-                            <li>Manejo de formularios</li>
-                            <li>Testing</li>
-                            <li>Algortimos de uso frecuente</li>
-                            <li>y demas herramientas utiles</li>
-
-                        </ul>
-                        claro esta que que este es un proyecto
-                        sencillo cuya idea
-                        es simplemente ser una pequeña herramienta mas, ademas se caracteriza por ser una libreria
-                        muy ligera, nuestra finalidad es brindar las herramientas escenciales para resolver problemas
-                        recurrentes.
-
-                    </p>
-
-
-
-                </div>
-            </article>
-
-
-        </section>
-        <section>
-            <h2 class="center">Descargar Easy Tools Js</h2>
-            <article class="download-github">
-
-
-                <a href="https://github.com/SMITH367/Easy-tolls" target="_blank"> Download from </a>
-                <img src="./Sources/logogithub.png" alt="" srcset="">
-
-            </article>
-            <article class="download-github">
-
-                <a href="./Sources/easyToolsmin.js" download="easyTools.js">Direct Download</a>
-
+                <h2>El objeto perimeterOf </h2>
+                <p></p>
+                <h3>Metodos</h3>
             </article>
 
         </section>
-
-        <section class="how-install">
-
-            <h3>Como instalar y usar easy tools</h3>
-            <p>Lo primero es descargar el paquete ya sea desde github o directamente desde la web</p>
-            <p>Easy tools se instala como cualquier otro modulo de EcmaScript 6.
-
-                <span>
-                </span>
-                de easy Toolsmas informacion sobre modulos javascript <a href="">aqui</a>
-            </p>
-
-        </section>
-
-        <section>
-
-            <div class="tutorial">
-                <video src="./Sources/install.mp4" controls width="90%" height="40%"></video>
-            </div>
-
-        </section>
-
-
 
         <footer>
 
@@ -206,14 +134,10 @@
                 Easy Tolls Js V1.0 </p>
 
         </footer>
-
-
     </div>
-
-
-    <script src="Js/main.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 </body>
+
 
 </html>
